# kommunalka

./: Cargo.toml
src/: ctx.rs  index.js  main.rs  model.rs
src/view/: auth_login.rs  mod.rs  style.css
src/web/: mod.rs  mw_auth.rs  routes_tickets.rs
