[package]
name = "axum_vdom"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = { version = "0.7.5", features = ["macros"] }
tokio = { version = "1.0", features = ["full"] }

  
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1"
tower-http = { version = "0.5.2", features = ["fs"] }
tower-cookies = "0.10.0"
uuid = {version = "1", features = ["v4", "v7","fast-rng",]}
strum_macros = "0.25"
async-trait = "0.1"
lazy-regex = "3"
serde_with = "3.7.0"
tokio-postgres = { version = "0.7.10", features = ['with-chrono-0_4', 'with-uuid-1'] }
chrono = "0.4.33"
dotenv = "0.15.0"
cookie = { version = "0.18", features = ["percent-encode"] }
tokio-cron-scheduler = "0.10.0"
axum-server = "0.6.0"
redis = { version = "0.26.1", features = ["tokio-comp"] }
sha256 = "1.5.0"

[dev-dependencies]
anyhow = "1"
httpc-test = "0.1.1"  
